WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68461
MathML renderers do not override RenderObject::renderName()
https://bugs.webkit.org/show_bug.cgi?id=68461
Summary
MathML renderers do not override RenderObject::renderName()
mitz
Reported
2011-09-20 13:11:20 PDT
MathML renderers do not override RenderObject::renderName()
Attachments
Add implementations of renderName() to MathML RenderObject subclasses
(272.11 KB, patch)
2011-09-20 13:16 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-09-20 13:16:25 PDT
Created
attachment 108046
[details]
Add implementations of renderName() to MathML RenderObject subclasses
mitz
Comment 2
2011-09-20 13:20:41 PDT
Fixed in <
http://trac.webkit.org/r95566
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug