MathML renderers do not override RenderObject::renderName() https://bugs.webkit.org/show_bug.cgi?id=68461

Reviewed by Darin Adler.

Source/WebCore:

Added implementations of renderName() in MathML RenderObject subclasses.

* rendering/mathml/RenderMathMLBlock.h:
(WebCore::RenderMathMLBlock::renderName):
* rendering/mathml/RenderMathMLFenced.h:
(WebCore::RenderMathMLFenced::renderName):
* rendering/mathml/RenderMathMLFraction.h:
(WebCore::RenderMathMLFraction::renderName):
* rendering/mathml/RenderMathMLMath.h:
(WebCore::RenderMathMLMath::renderName):
* rendering/mathml/RenderMathMLOperator.h:
(WebCore::RenderMathMLOperator::renderName):
* rendering/mathml/RenderMathMLRoot.h:
(WebCore::RenderMathMLRoot::renderName):
* rendering/mathml/RenderMathMLRow.h:
(WebCore::RenderMathMLRow::renderName):
* rendering/mathml/RenderMathMLSquareRoot.h:
(WebCore::RenderMathMLSquareRoot::renderName):
* rendering/mathml/RenderMathMLSubSup.h:
(WebCore::RenderMathMLSubSup::renderName):
* rendering/mathml/RenderMathMLUnderOver.h:
(WebCore::RenderMathMLUnderOver::renderName):

LayoutTests:

* platform/mac/mathml/presentation/attributes-expected.txt:
* platform/mac/mathml/presentation/fenced-expected.txt:
* platform/mac/mathml/presentation/fenced-mi-expected.txt:
* platform/mac/mathml/presentation/fractions-expected.txt:
* platform/mac/mathml/presentation/fractions-vertical-alignment-expected.txt:
* platform/mac/mathml/presentation/mo-expected.txt:
* platform/mac/mathml/presentation/msub-base-changed-expected.txt:
* platform/mac/mathml/presentation/msub-sub-changed-expected.txt:
* platform/mac/mathml/presentation/msubsup-base-changed-expected.txt:
* platform/mac/mathml/presentation/msubsup-sub-changed-expected.txt:
* platform/mac/mathml/presentation/msubsup-sup-changed-expected.txt:
* platform/mac/mathml/presentation/msup-base-changed-expected.txt:
* platform/mac/mathml/presentation/msup-sup-changed-expected.txt:
* platform/mac/mathml/presentation/over-expected.txt:
* platform/mac/mathml/presentation/roots-expected.txt:
* platform/mac/mathml/presentation/row-alignment-expected.txt:
* platform/mac/mathml/presentation/row-expected.txt:
* platform/mac/mathml/presentation/style-expected.txt:
* platform/mac/mathml/presentation/sub-expected.txt:
* platform/mac/mathml/presentation/subsup-expected.txt:
* platform/mac/mathml/presentation/sup-expected.txt:
* platform/mac/mathml/presentation/tables-expected.txt:
* platform/mac/mathml/presentation/tokenElements-expected.txt:
* platform/mac/mathml/presentation/under-expected.txt:
* platform/mac/mathml/presentation/underover-expected.txt:
* platform/mac/mathml/xHeight-expected.txt:



Canonical link: https://commits.webkit.org/84411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95566 268f45cc-cd09-0410-ab3c-d52691b4dbfc