Source/WebCore/rendering/mathml/RenderMathMLFraction.h
@@ -43,6 +43,7 @@ public:
 protected:
     virtual void layout();
 private:
+    virtual const char* renderName() const { return "RenderMathMLFraction"; }
     float m_lineThickness;
 };
 
