Source/WebCore/rendering/mathml/RenderMathMLRoot.h
@@ -39,6 +39,9 @@ public:
     virtual void paint(PaintInfo&, const LayoutPoint&);
 protected:
     virtual void layout();
+
+private:
+    virtual const char* renderName() const { return "RenderMathMLRoot"; }
 };
     
 }
